--- a/public/index.html
+++ b/public/index.html
@@ -5,25 +5,25 @@
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <meta name="description" content="Simple Meme Generator using react" />
       <!--favicons-->
-      <link rel="icon" href="%PUBLIC_URL%/favicons/favicon.ico" />
+      <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
       <link
          rel="apple-touch-icon"
          sizes="180x180"
-         href="%PUBLIC_URL%/favicons/apple-touch-icon.png"
+         href="%PUBLIC_URL%//apple-touch-icon.png"
       />
       <link
          rel="icon"
          type="image/png"
          sizes="32x32"
-         href="%PUBLIC_URL%/favicons/favicon-32x32.png"
+         href="%PUBLIC_URL%/favicon-32x32.png"
       />
       <link
          rel="icon"
          type="image/png"
          sizes="16x16"
-         href="%PUBLIC_URL%/favicons/favicon-16x16.png"
+         href="%PUBLIC_URL%/favicon-16x16.png"
       />
-      <link rel="manifest" href="%PUBLIC_URL%/favicons/site.webmanifest" />
+      <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest" />
       <title>Meme Generator</title>
    </head>
    <body>
