--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,12 @@
       />
       <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest" />
       <title>Meme Generator</title>
+      <!--Fonts-->
+      <link rel="preconnect" href="https://fonts.gstatic.com" />
+      <link
+         href="https://fonts.googleapis.com/css2?family=DM+Mono&display=swap"
+         rel="stylesheet"
+      />
    </head>
    <body>
       <noscript>You need to enable JavaScript to run this app.</noscript>
